<resources>
    <string name="app_name">Days Left</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">List</string>
    <string name="title_notifications">Tools</string>
    <!-- string for Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Driver Name</string>
    <string name="nav_header_subtitle">driver@example.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="no_match_password">Passwords do not match</string>
    <string name="no_match_email">Emails do not match</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login_failed">Failed to sign in</string>
    <string name="search_abn">Search A.B.N</string>
    <string name="search_name">Search Name</string>
    <string name="set_date">Select Date</string>
    <string name="empty_line_one">List is Empty</string>
    <string name="empty_line_two">Search for an Employer</string>
    <string name="submit">Submit</string>
    <string name="welcome_title">Welcome to Days Left</string>
    <string name="welcome_subtitle">Use days left to track your rural work progress, track your work done and compile data needed for visa applications.</string>
    <string name="register">Regiseter</string>
    <string name="login">Login</string>
    <string name="login_title">Login</string>
    <string name="login_subtitle">Login to your account with your email address and password.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_subtitle">Enter your email address and receive a reset password email.</string>
    <string name="action_submit">Submit</string>
    <string name="prompt_nickname">Enter a nickname</string>
    <string name="next">Next</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid Email</string>
    <string name="invalid_password">Password must contain 8–16 characters, including at least 1 upper case letter and at least 1 numerical digit.</string>
    <string name="password_reset_success">Password reset successful</string>

    <string name="piece_constant">Hourly</string>
    <string name="hourly_constant">Piece Rate</string>

    <string-array name="work_type">
        <item>Select work type…</item>
        <item>Piece Rate</item>
        <item>Hourly</item>
    </string-array>

    <string-array name="task_list">
        <item>Select work type…</item>
        <item>Harvesting</item>
        <item>Packing</item>
        <item>Other</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="user_settings_header">User Settings</string>
    <string name="change_email_title">Change email</string>
    <string name="change_password_title">Change Password</string>
    <string name="change_name_title">Change Name</string>
    <string name="title_settings">Settings</string>
    <string name="account_settings_header">Account Settings</string>
    <string name="log_out_title">Log out</string>
    <string name="total_earnings_header">Accumulated Earnings</string>
    <string name="employer_details">Employer</string>
    <string name="shift_details">Shift details</string>
    <string name="date_details">Shift overview</string>
    <string name="employer_name_title">Employer Name</string>
    <string name="employer_abn_title">ABN</string>
    <string name="employer_location_title">Location</string>
    <string name="shift_date_details">Date</string>
    <string name="shift_rate_details">Rate of pay</string>
    <string name="shift_task_details">Task</string>
    <string name="shift_units_details">Units</string>
    <string name="shift_total_pay_details">Total Earned</string>
    <string name="shift_time_in_details">Time In</string>
    <string name="shift_time_out_details">Time Out</string>
    <string name="shift_break_details">Break (mins)</string>
    <string name="shift_hours_details">Hours worked</string>
</resources>
