<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/user_settings_header">

        <Preference
            app:iconSpaceReserved="false"
            app:key="email"
            app:title="@string/change_email_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="password"
            app:title="@string/change_password_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="name"
            app:title="@string/change_name_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/account_settings_header">

        <Preference
            app:iconSpaceReserved="false"
            app:key="log_out"
            app:title="@string/log_out_title" />

    </PreferenceCategory>

</PreferenceScreen>